[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ethan Brown <ethan@ewbrowntech.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
